fix: Added spacing between buttons, fixed html structure

--- a/assets/sass/kerrokantasi/_common.scss
+++ b/assets/sass/kerrokantasi/_common.scss
@@ -203,7 +203,8 @@ a.fullwidth {
   }
 }
 
-.kerrokantasi-btn[type="button"] {
+.kerrokantasi-btn[type="button"], .kerrokantasi-btn[type="submit"] {
+  margin: 0px 2px;
   border-color: $black;
   color: $black;
   background: transparent;
@@ -242,7 +243,7 @@ a.fullwidth {
     }
   }
   &.gear {
-    color: #333;
+    color: --color-black-20;
     border: none;
     background: transparent;
     height: 56px;
